Fixed Z-index issues
- Created z-index classes to easily separate elements into layers

- Also fixed the icon position issue

- Also patched the horizontal scrollbar that was appearing by setting the overflow-x style.

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,5 +1,33 @@
 @import './base.css';
 
+body {
+  overflow-x: hidden;
+}
+
 h2 {
   padding: 20px 30px;
+}
+
+.far-far-back {
+  z-index: -10;
+}
+
+.far-back {
+  z-index: -5;
+}
+
+.back {
+  z-index: -3;
+}
+
+.front {
+  z-index: 3;
+}
+
+.far-front {
+  z-index: 5;
+}
+
+.far-far-front {
+  z-index: 10;
 }
